<package>
  <name>warehouse_ros</name>
  <version>0.8.8</version>
  <description>
    Persistent storage of ROS data using MongoDB
  </description>
  <author email="bhaskara@willowgarage.com">Bhaskara Marthi</author>
  <maintainer email="isucan@google.com">Ioan Sucan</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/warehouse_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mongodb-dev</build_depend>
  <build_depend>python-pymongo</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>libssl-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mongodb</run_depend>
  <run_depend>python-pymongo</run_depend>
  <run_depend>curl</run_depend>
  <run_depend>libssl-dev</run_depend>
  
  <test_depend>gtest</test_depend>

</package>
