<package>
  <name>warehouse_ros</name>
  <version>2.0.0</version>
  <description>
    Persistent storage of ROS messages
  </description>
  <author email="bhaskara@willowgarage.com">Bhaskara Marthi</author>
  <author email="cbrew@fetchrobotics.com">Connor Brew</author>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt! Release Team</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/warehouse_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend version_gte="1.11.2">pluginlib</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>rclcpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend version_gte="1.11.2">pluginlib</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend> -->
</package>
