<package format="3">
  <name>warehouse_ros</name>
  <version>2.0.5</version>
  <description>Persistent storage of ROS messages</description>
  <author email="bhaskara@willowgarage.com">Bhaskara Marthi</author>
  <author email="cbrew@fetchrobotics.com">Connor Brew</author>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt Release Team</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/warehouse_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>libssl-dev</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend version_gte="1.11.2">pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend> -->
</package>
